--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
-   
+
     <title>Web Portfolio</title>
   </head>
   <body>
-    
+   
+    <div id="root"></div>
+   
+    -->
   </body>
 </html>
